<resources>
    <string name="app_name">Arten</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_account">Register Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="register_me">Register Me</string>
    <string name="already_registered">Already registered? Back to</string>
    <string name="login_underline"><u>Login</u></string>
    <string name="record_voice">Record Voice</string>
    <string name="resume_pause_recording">resume/pause recording</string>
    <string name="language">Language</string>
    <string name="language_to_translate">language to translate</string>
    <string name="white_button_to_start">white button to start</string>
    <string name="send_voice">send voice</string>
    <string name="english">English</string>
    <string name="indonesia">Indonesia</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="get_otp_code">Get OTP Code</string>
    <string name="we_will_send_an_otp_code_nto_verify_your_account">We will send an OTP code\nto verify your account</string>
    <string name="verify">Verify</string>
    <string name="we_have_sent_an_otp_code_nto">We have sent an OTP code\nto</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="switch_language">Switch Language</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
</resources>